footer alignment fix and link styling

--- a/sass/_vars.scss
+++ b/sass/_vars.scss
@@ -1,2 +1,5 @@
 $dark-black: #323232;
 $light-blue: #eaf4f9;
+
+$deep-red: #943246;
+$light-red: #b46f7d;
