--- a/sass/main.scss
+++ b/sass/main.scss
@@ -29,3 +29,11 @@ body {
 main {
   width: 100%;
 }
+
+a {
+  color: $deep-red;
+}
+
+a:visited {
+  color: $light-red;
+}
