--- a/sass/nav/main.scss
+++ b/sass/nav/main.scss
@@ -52,5 +52,5 @@
 
 .nav__link {
   text-decoration: none;
-  color: $dark-black;
+  color: $dark-black !important;
 }
